syntax = "proto3";

package ecommerce;

option go_package = "productinfo_mtls/server/ecommerce";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
}

message Product {
  string id = 1;
  float price = 2;
}

message ProductID {
  string value = 1;
}